# Astc

./: README.md
plugin/: .gitignore  CMakeLists.txt  astc.cpp  astc.h  common.h  ldr.astc  main.cpp  make_android.sh  make_ios.sh  make_osx.sh
unity/: .gitignore
unity/Assets/Plugins/xmedia.bundle/Contents/MacOS/: xmedia
unity/Assets/Resources/: hdr.bytes
unity/Assets/Scenes/: SampleScene.unity
unity/Assets/Scripts/: MediaApi.cs  Test.cs
unity/ProjectSettings/: ProjectSettings.asset
